# oaks

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  package.json  readme.md  rustfmt.toml
examples/oak-actionscript/: Cargo.toml  readme.md
examples/oak-actionscript/src/: lib.rs  lsp.rs  mcp.rs  readme.md
examples/oak-actionscript/src/ast/: mod.rs  readme.md
examples/oak-actionscript/src/builder/: mod.rs  readme.md
examples/oak-actionscript/src/formatter/: mod.rs  readme.md
examples/oak-actionscript/src/highlighter/: mod.rs  readme.md
examples/oak-actionscript/src/kind/: mod.rs
examples/oak-actionscript/src/language/: mod.rs  readme.md
examples/oak-actionscript/src/lexer/: mod.rs  readme.md  token_type.rs
examples/oak-actionscript/src/lsp/: mod.rs  readme.md
examples/oak-actionscript/src/mcp/: mod.rs  readme.md
examples/oak-actionscript/src/parser/: element_type.rs  mod.rs  parse.rs  parse_top_level.rs  readme.md
examples/oak-actionscript/tests/: readme.md
examples/oak-actionscript/tests/lexer/: basic.as  basic.as.expected.json  basic.as.lexed.json  mod.rs
examples/oak-ada/: Cargo.toml  readme.md
examples/oak-ada/src/: lib.rs  lsp.rs  mcp.rs  readme.md
examples/oak-ada/src/ast/: mod.rs  readme.md
examples/oak-ada/src/builder/: mod.rs  readme.md
examples/oak-ada/src/formatter/: mod.rs
examples/oak-ada/src/highlighter/: mod.rs
examples/oak-ada/src/kind/: mod.rs
examples/oak-ada/src/language/: mod.rs  readme.md
examples/oak-ada/src/lexer/: mod.rs  readme.md  token_type.rs
examples/oak-ada/src/lsp/: mod.rs  readme.md
examples/oak-ada/src/mcp/: mod.rs  readme.md
examples/oak-ada/src/parser/: element_type.rs  mod.rs  readme.md
examples/oak-ada/tests/lexer/: basic.ada  basic.ada.expected.json  basic.ada.lexed.json  mod.rs  simple.ada.expected.json  simple.ada.lexed.json
examples/oak-ada/tests/parser/: mod.rs
examples/oak-ascii-doc/: Cargo.toml  readme.md
examples/oak-ascii-doc/src/: lib.rs  readme.md
examples/oak-ascii-doc/src/ast/: mod.rs  readme.md
examples/oak-ascii-doc/src/kind/: mod.rs
examples/oak-ascii-doc/src/language/: mod.rs  readme.md
examples/oak-ascii-doc/src/lexer/: mod.rs  readme.md  token_type.rs
examples/oak-ascii-doc/src/lsp/: mod.rs  readme.md
examples/oak-ascii-doc/src/parser/: element_type.rs  mod.rs  parse.rs  parse_top_level.rs  readme.md
examples/oak-ascii-doc/tests/: readme.md
examples/oak-ascii-doc/tests/lexer/: basic.asciidoc  basic.asciidoc.expected.json  basic.asciidoc.lexed.json  mod.rs
examples/oak-bash/: Cargo.toml  readme.md
examples/oak-bash/src/: lib.rs  readme.md
examples/oak-bash/src/ast/: mod.rs  readme.md
examples/oak-bash/src/builder/: mod.rs  readme.md
examples/oak-bash/src/kind/: mod.rs
examples/oak-bash/src/language/: mod.rs  readme.md
examples/oak-bash/tests/: readme.md
examples/oak-c4/: Cargo.toml  readme.md
examples/oak-c4/src/: lib.rs  model.rs
examples/oak-clojure/: Cargo.toml  readme.md
examples/oak-clojure/src/: lib.rs
examples/oak-clojure/tests/: readme.md
examples/oak-cobol/: Cargo.toml  readme.md
examples/oak-cobol/src/: lib.rs  readme.md
examples/oak-cobol/tests/: main.rs  readme.md
examples/oak-coq/: Cargo.toml  readme.md
examples/oak-coq/src/: lib.rs  lsp.rs  mcp.rs  readme.md
examples/oak-coq/tests/: main.rs  readme.md
examples/oak-cpp/: Cargo.toml  readme.md
examples/oak-cpp/src/: lib.rs  readme.md
examples/oak-cpp/tests/: main.rs  readme.md
examples/oak-crystal/: Cargo.toml  readme.md
examples/oak-crystal/src/: lib.rs
examples/oak-crystal/tests/: main.rs  readme.md
examples/oak-csharp/: Cargo.toml  readme.md
examples/oak-csharp/src/: lib.rs  readme.md
examples/oak-csharp/tests/: integration_test.rs  main.rs  readme.md
examples/oak-css/: Cargo.toml  readme.md
examples/oak-css/src/: lib.rs  readme.md
examples/oak-css/tests/: readme.md
examples/oak-csv/: Cargo.toml  readme.md
examples/oak-csv/src/: lib.rs  readme.md
examples/oak-d/: Cargo.toml  readme.md
examples/oak-d/src/: lib.rs  readme.md
examples/oak-d/tests/: readme.md
examples/oak-dart/: Cargo.toml  readme.md
examples/oak-dart/src/: lib.rs  readme.md
examples/oak-dart/tests/: readme.md
examples/oak-dejavu/: Cargo.toml  readme.md
examples/oak-dejavu/src/: lib.rs
examples/oak-dejavu/tests/: annotation_test.rs  main.rs  syntax_unification.rs
examples/oak-delphi/: Cargo.toml  readme.md
examples/oak-delphi/src/: lib.rs  readme.md
examples/oak-dhall/: Cargo.toml  readme.md
examples/oak-dhall/src/: lib.rs
examples/oak-dhall/tests/: readme.md
examples/oak-django/: Cargo.toml  readme.md
examples/oak-django/src/: lib.rs
examples/oak-django/tests/: readme.md
examples/oak-dockerfile/: Cargo.toml  readme.md
examples/oak-dockerfile/src/: lib.rs  readme.md
examples/oak-dockerfile/tests/: main.rs
examples/oak-fortran/: Cargo.toml  readme.md
examples/oak-fortran/src/: lib.rs
examples/oak-fortran/tests/: main.rs  readme.md
examples/oak-fsharp/: Cargo.toml  readme.md
examples/oak-fsharp/src/: lib.rs  readme.md
examples/oak-fsharp/tests/: main.rs  readme.md
examples/oak-go/: Cargo.toml  readme.md
examples/oak-go/src/: lib.rs  lsp.rs  mcp.rs  readme.md
examples/oak-go/tests/: main.rs  readme.md
examples/oak-graphql/: Cargo.toml  readme.md
examples/oak-graphql/src/: lib.rs
examples/oak-graphql/tests/: main.rs  readme.md
examples/oak-groovy/: Cargo.toml  readme.md
examples/oak-groovy/src/: lib.rs  readme.md
examples/oak-groovy/tests/: main.rs
examples/oak-gsgl/: Cargo.toml  readme.md
examples/oak-gsgl/src/: lib.rs
examples/oak-gsgl/tests/: readme.md
examples/oak-haskell/: Cargo.toml  readme.md
examples/oak-haskell/src/: lib.rs  lsp.rs  mcp.rs
examples/oak-haskell/tests/: readme.md
examples/oak-html/: Cargo.toml  readme.md
examples/oak-html/src/: lib.rs  lsp.rs  mcp.rs  readme.md
examples/oak-html/tests/: main.rs  readme.md
examples/oak-ini/: Cargo.toml  readme.md
examples/oak-ini/src/: lib.rs  lsp.rs  mcp.rs
examples/oak-ini/tests/: main.rs  readme.md
(+3605 files in other folders)
