[workspace]
resolver = "2"
members = [
    "projects/*",
    "examples/*",
]
exclude = [
    "projects/.DS_Store",
]

[workspace.package]
version = "0.0.2"
authors = ["Yggdrasill Team <192607617@qq.com>"]
edition = "2024"
license = "MPL-2.0"
homepage = "https://github.com/ygg-lang/oaks"
repository = "https://github.com/ygg-lang/oaks"
readme = "readme.md"

[workspace.dependencies]
# External dependencies removed to achieve architectural independence
walkdir = { version = "2.5.0" }
serde = { version = "1.0.227", features = ["derive"] }
serde_json = { version = "1.0.145" }
schemars = { version = "1.0.4", features = ["derive"] }
tracing = { version = "0.1.41" }
criterion = { version = "0.8.1" }
unicode-ident = { version = "1.0" }
url = { version = "2.5.7", features = ["serde"] }
triomphe = { version = "0.1.15", default-features = false, features = ["serde"] }
smallvec = { version = "1.13", features = ["union", "const_generics", "const_new"] }
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
syn = { version = "2.0", features = ["full"] }
tokio = { version = "1.43.0", default-features = false }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
futures = { version = "0.3.31" }
dashmap = { version = "6.1.0" }
anyhow = "1.0.95"
thiserror = "2.0.11"
itertools = "0.14.0"
chrono = "0.4.39"
ntest = "0.9.3"
notify = "8.0.0"
crossterm = "0.29.0"
unicode-width = "0.2.2"
clap = { version = "4.5", features = ["derive"] }
axum = "0.8.1"

# Internal project dependencies
oak-json = { version = "0.0.2", path = "examples/oak-json" }
oaks = { version = "0.0.2", path = "projects/oaks" }
oak-lsp = { version = "0.0.2", path = "projects/oak-lsp" }
oak-folding = { version = "0.0.2", path = "projects/oak-folding" }
oak-hover = { version = "0.0.2", path = "projects/oak-hover" }
oak-navigation = { version = "0.0.2", path = "projects/oak-navigation" }
oak-repl = { version = "0.0.2", path = "projects/oak-repl" }
oak-semantic-tokens = { version = "0.0.2", path = "projects/oak-semantic-tokens" }
oak-structure = { version = "0.0.2", path = "projects/oak-structure" }
oak-vfs = { version = "0.0.2", path = "projects/oak-vfs" }
oak-symbols = { version = "0.0.2", path = "projects/oak-symbols" }
oak-core = { version = "0.0.2", path = "projects/oak-core", features = ["serde"] }
oak-macros = { version = "0.0.2", path = "projects/oak-macros" }
oak-testing = { version = "0.0.2", path = "projects/oak-testing" }
oak-diagnostic = { version = "0.0.2", path = "projects/oak-diagnostic" }
oak-highlight = { version = "0.0.2", path = "projects/oak-highlight" }
oak-pretty-print = { version = "0.0.2", path = "projects/oak-pretty-print" }
oak-mcp = { version = "0.0.2", path = "projects/oak-mcp" }
oak-semantic-search = { version = "0.0.2", path = "projects/oak-semantic-search" }
oak-resolver = { version = "0.0.2", path = "projects/oak-resolver" }
oak-visualize = { version = "0.0.2", path = "projects/oak-visualize" }

# Benchmark comparison crates
# toml = "0.9.11+spec-1.1.0" # replaced by oak-toml
toml_edit = "0.24.0"
markdown = "1.0.0-alpha.18"
pulldown-cmark = "0.13.0"
simd-json = "0.17.0"
json = "0.12"
html5ever = "0.27"
cssparser = "0.34"
serde_yaml = "0.9"
rustpython-parser = "0.4"
swc_ecma_parser = "0.147"
swc_common = "0.37"
oxc_parser = "0.13"
oxc_allocator = "0.13"
oxc_span = "0.13"

# langs
oak-ada = { version = "0.0.2", path = "examples/oak-ada" }
oak-ascii-doc = { version = "0.0.2", path = "examples/oak-ascii-doc" }
oak-bash = { version = "0.0.2", path = "examples/oak-bash" }
oak-c = { version = "0.0.2", path = "examples/oak-c" }
oak-clojure = { version = "0.0.2", path = "examples/oak-clojure" }
oak-cobol = { version = "0.0.2", path = "examples/oak-cobol" }
oak-coq = { version = "0.0.2", path = "examples/oak-coq" }
oak-cpp = { version = "0.0.2", path = "examples/oak-cpp" }
oak-csharp = { version = "0.0.2", path = "examples/oak-csharp" }
oak-rust = { version = "0.0.2", path = "examples/oak-rust" }
oak-css = { version = "0.0.2", path = "examples/oak-css" }
oak-html = { version = "0.0.2", path = "examples/oak-html" }
oak-markdown = { version = "0.0.2", path = "examples/oak-markdown" }
oak-sql = { version = "0.0.2", path = "examples/oak-sql" }
oak-python = { version = "0.0.2", path = "examples/oak-python" }
oak-toml = { version = "0.0.2", path = "examples/oak-toml" }
oak-yaml = { version = "0.0.2", path = "examples/oak-yaml" }
oak-twig = { version = "0.0.2", path = "examples/oak-twig" }
oak-javadoc = { version = "0.0.2", path = "examples/oak-javadoc" }
oak-typescript = { version = "0.0.2", path = "examples/oak-typescript" }
oak-javascript = { version = "0.0.2", path = "examples/oak-javascript" }
