[package]
name = "oak-actionscript"
version.workspace = true
authors.workspace = true
description = "High-performance incremental ActionScript parser for the oak ecosystem with flexible configuration, supporting modern ActionScript features and Flash development."
edition.workspace = true
license.workspace = true
readme = "readme.md"
homepage.workspace = true
repository = "https://github.com/ygg-lang/oaks/tree/master/examples/oak-actionscript"
documentation = "https://docs.rs/oak-actionscript"
categories = ["parsing"]
keywords = ["parser", "actionscript", "flash", "syntax-analysis"]

[dependencies]
oak-core = { workspace = true }
oak-highlight = { workspace = true, optional = true }
oak-pretty-print = { workspace = true, optional = true }
oak-lsp = { workspace = true, optional = true }
oak-hover = { workspace = true, optional = true }
oak-vfs = { workspace = true, optional = true }
oak-mcp = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
tracing = { workspace = true }

tokio = { workspace = true, optional = true }

[dev-dependencies]
oak-testing = { workspace = true }

[features]
default = ["serde"]
serde = ["dep:serde", "oak-core/serde"]
oak-highlight = ["dep:oak-highlight"]
oak-pretty-print = ["dep:oak-pretty-print"]
lsp = ["dep:oak-lsp", "dep:oak-hover", "dep:oak-vfs", "oak-highlight", "oak-pretty-print", "dep:futures"]
mcp = ["lsp", "oak-mcp/io-std"]

[package.metadata.docs.rs]
all-features = true
