[package]
name = "oak-ada"
description = "High-performance incremental Ada parser for the oak ecosystem with flexible configuration, emphasizing safety and reliability."
categories = ["parsing"]
keywords = ["parser", "ada", "safety", "language"]
documentation = "https://docs.rs/oak-ada"
readme = "readme.md"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
oak-core = { workspace = true }
oak-highlight = { workspace = true }
oak-pretty-print = { workspace = true }
oak-lsp = { workspace = true }
oak-hover = { workspace = true }
oak-vfs = { workspace = true }
oak-mcp = { workspace = true, optional = true }
serde = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, optional = true }
axum = { workspace = true, optional = true }

[dev-dependencies]
oak-core = { workspace = true, features = ["testing"] }

[features]
default = []
std = []
mcp = ["dep:oak-mcp"]
axum = ["mcp", "dep:tokio", "dep:axum", "oak-lsp/axum", "oak-mcp/axum"]

[package.metadata.docs.rs]
all-features = true
