[package]
name = "oak-bash"
description = "High-performance incremental Bash parser for the oak ecosystem with flexible configuration, supporting shell scripting and automation workflows."
categories = ["parsing"]
keywords = ["parser", "bash", "shell", "posix"]
documentation = "https://docs.rs/oak-bash"
readme = "readme.md"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true


[dependencies]
oak-core = { workspace = true }
oak-highlight = { workspace = true, optional = true }
oak-pretty-print = { workspace = true, optional = true }

[dev-dependencies]
oak-core = { workspace = true, features = ["testing"] }


[features]
default = []
alloc = []

[package.metadata.docs.rs]
all-features = true