[package]
name = "oak-clojure"
description = "High-performance incremental Clojure parser for the oak ecosystem with flexible configuration, supporting functional programming and Lisp syntax on the JVM."
categories = ["parsing"]
keywords = ["parser", "clojure", "lisp", "functional"]
documentation = "https://docs.rs/oak-clojure"
readme = "readme.md"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
oak-core = { workspace = true }
oak-highlight = { workspace = true, optional = true }
oak-pretty-print = { workspace = true, optional = true }

[dev-dependencies]
oak-core = { workspace = true, features = ["testing"] }


[features]
default = []
alloc = []

[package.metadata.docs.rs]
all-features = true