[package]
name = "oak-clojure"
description = "Clojure functional programming language parser with support for Lisp syntax and JVM ecosystem integration."
categories = ["parsing"]
keywords = ["parser", "clojure", "lisp", "functional"]
documentation = "https://docs.rs/oak-clojure"
readme = "readme.md"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
oak-core = { workspace = true }
serde = { workspace = true }
oak-highlight = { workspace = true, optional = true }
oak-pretty-print = { workspace = true, optional = true }

[dev-dependencies]
oak-testing = { workspace = true }


[features]
default = []


[package.metadata.docs.rs]
all-features = true
