[package]
name = "oak-clojure"
version.workspace = true
authors.workspace = true
description = "Clojure functional programming language parser with support for Lisp syntax and JVM ecosystem integration."
edition.workspace = true
license.workspace = true
readme = "readme.md"
homepage.workspace = true
repository = "https://github.com/ygg-lang/oaks/tree/master/examples/oak-clojure"
documentation = "https://docs.rs/oak-clojure"
categories = ["parsing"]
keywords = ["parser", "clojure", "lisp", "functional"]

[dependencies]
oak-core = { workspace = true }
serde = { workspace = true, optional = true }
oak-highlight = { workspace = true, optional = true }
oak-pretty-print = { workspace = true, optional = true }

oak-lsp = { workspace = true, optional = true }
oak-hover = { workspace = true, optional = true }
oak-vfs = { workspace = true, optional = true }
oak-mcp = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

[dev-dependencies]
oak-testing = { workspace = true }

[features]
default = ["serde"]
serde = ["dep:serde", "oak-core/serde"]
lsp = ["dep:oak-lsp", "dep:oak-hover", "dep:oak-vfs", "oak-highlight", "oak-pretty-print", "dep:futures"]
mcp = ["lsp", "oak-mcp/io-std"]

[package.metadata.docs.rs]
all-features = true
