[package]
name = "oak-coq"
description = "Coq theorem prover language parser with support for dependent types and formal verification."
categories = ["parsing"]
keywords = ["parser", "coq", "theorem-prover", "dependent-types"]
documentation = "https://docs.rs/oak-coq"
readme = "readme.md"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
oak-core = { workspace = true }
oak-highlight = { workspace = true, optional = true }
oak-pretty-print = { workspace = true, optional = true }
oak-lsp = { workspace = true }
oak-mcp = { workspace = true }
oak-vfs = { workspace = true }
oak-hover = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
oak-testing = { workspace = true }

[features]
default = []


[package.metadata.docs.rs]
all-features = true
