[package]
name = "oak-cpp"
description = "C++ systems programming language parser with support for modern C++ features and object-oriented programming."
categories = ["parsing"]
keywords = ["parser", "cpp", "cplusplus", "syntax-analysis"]
documentation = "https://docs.rs/oak-cpp"
readme = "readme.md"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
oak-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
oak-highlight = { workspace = true, optional = true }
oak-pretty-print = { workspace = true, optional = true }

[dev-dependencies]
oak-testing = { workspace = true }


[features]
default = []


[package.metadata.docs.rs]
all-features = true
