[package]
name = "oak-cpp"
version.workspace = true
authors.workspace = true
description = "C++ systems programming language parser with support for modern C++ features and object-oriented programming."
edition.workspace = true
license.workspace = true
readme = "readme.md"
homepage.workspace = true
repository = "https://github.com/ygg-lang/oaks/tree/master/examples/oak-cpp"
documentation = "https://docs.rs/oak-cpp"
categories = ["parsing"]
keywords = ["parser", "cpp", "cplusplus", "syntax-analysis"]

[dependencies]
oak-core = { workspace = true }
serde = { workspace = true, features = ["derive"] , optional = true }
oak-highlight = { workspace = true, optional = true }
oak-pretty-print = { workspace = true, optional = true }

oak-lsp = { workspace = true, optional = true }
oak-hover = { workspace = true, optional = true }
oak-vfs = { workspace = true, optional = true }
oak-mcp = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

[dev-dependencies]
oak-testing = { workspace = true }

[features]
default = ["serde"]
serde = ["dep:serde", "oak-core/serde"]
oak-highlight = ["dep:oak-highlight"]
lsp = ["dep:oak-lsp", "dep:oak-hover", "dep:oak-vfs", "oak-highlight", "dep:oak-pretty-print", "dep:futures"]
mcp = ["lsp", "oak-mcp/io-std"]

[package.metadata.docs.rs]
all-features = true
