[package]
name = "oak-crystal"
description = "Crystal language parser with support for modern Crystal syntax and Ruby-like features."
categories = ["parsing"]
keywords = ["parser", "crystal", "ruby-like", "compiled"]
documentation = "https://docs.rs/oak-crystal"
readme = "readme.md"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
oak-core = { workspace = true }
serde = { workspace = true }
oak-highlight = { workspace = true, optional = true }
oak-pretty-print = { workspace = true, optional = true }

[dev-dependencies]
oak-testing = { workspace = true }


[features]
default = []


[package.metadata.docs.rs]
all-features = true
