[package]
name = "oak-csharp"
description = "High-performance incremental C# parser for the oak ecosystem with flexible configuration, supporting modern .NET features and managed programming."
categories = ["parsing"]
keywords = ["parser", "csharp", "dotnet", "syntax-analysis"]
documentation = "https://docs.rs/oak-csharp"
readme = "readme.md"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
oak-core = { workspace = true }
oak-highlight = { workspace = true, optional = true }
oak-pretty-print = { workspace = true, optional = true }

[dev-dependencies]
oak-core = { workspace = true, features = ["testing"] }


[features]
default = []
alloc = []

[package.metadata.docs.rs]
all-features = true