[package]
name = "oak-csharp"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
categories = ["compilers", "development-tools"]
keywords = ["frontend", "language", "csharp"]
description = "C# frontend for Oak"

[dependencies]
oak-core = { workspace = true }
serde = { workspace = true }
