[package]
name = "oak-css"
description = "High-performance incremental CSS parser for the oak ecosystem with flexible configuration, optimized for web styling and layout processing."
categories = ["parsing"]
keywords = ["parser", "css", "streaming", "validation"]
documentation = "https://docs.rs/oak-css"
readme = "readme.md"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
oak-core = { workspace = true }
oak-highlight = { workspace = true, optional = true }
oak-pretty-print = { workspace = true, optional = true }

[dev-dependencies]
oak-core = { workspace = true, features = ["testing"] }


[features]
default = []


[package.metadata.docs.rs]
all-features = true