[package]
name = "oak-css"
description = "CSS stylesheet language parser with support for web styling and layout processing."
categories = ["parsing"]
keywords = ["parser", "css", "streaming", "validation"]
documentation = "https://docs.rs/oak-css"
readme = "readme.md"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
oak-core = { workspace = true }
serde = { workspace = true }
oak-highlight = { workspace = true, optional = true }
oak-pretty-print = { workspace = true, optional = true }

[dev-dependencies]
oak-testing = { workspace = true }


[features]
default = []


[package.metadata.docs.rs]
all-features = true
