[package]
name = "oak-csv"
description = "High-performance incremental CSV parser for the oak ecosystem with flexible configuration, optimized for data parsing and tabular data processing."
categories = ["parsing"]
keywords = ["parser", "csv", "data", "tabular"]
documentation = "https://docs.rs/oak-csv"
readme = "readme.md"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true


[dependencies]
oak-core = { workspace = true }
serde = { workspace = true }
oak-highlight = { workspace = true, optional = true }
oak-pretty-print = { workspace = true, optional = true }

[dev-dependencies]
oak-core = { workspace = true, features = ["testing"] }


[features]
default = []


[package.metadata.docs.rs]
all-features = true
